# agdb

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  GITHUB_OUTPUT  README.md  api.ts  build.sh  composer.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.workspace.ts
.github/: FUNDING.yml  (+1 more)
agdb/: Cargo.toml  storage2
agdb/src/: api.rs  api_def.rs  collections.rs  command.rs  db.rs  graph.rs  graph_search.rs  lib.rs  query.rs  query_builder.rs  storage.rs  test_utilities.rs  transaction.rs  transaction_mut.rs  type_def.rs
agdb/src/api/: builder.rs
agdb/src/api_def/: enum_def.rs  expression_def.rs  function_def.rs  struct_def.rs  trait_def.rs  tuple_def.rs  tuple_struct_def.rs
agdb/src/collections/: bit_set.rs  indexed_map.rs  map.rs  map2.rs  multi_map.rs  multi_map2.rs  vec.rs  vec2.rs
agdb/src/db/: db_config.rs  db_element.rs  db_error.rs  db_f64.rs  db_id.rs  db_index.rs  db_key.rs  db_key_order.rs  db_key_value.rs  db_search_handlers.rs  db_type.rs  db_user_value.rs  db_value.rs  db_value_index.rs
agdb/src/graph_search/: breadth_first_search.rs  breadth_first_search_reverse.rs  depth_first_search.rs  depth_first_search_reverse.rs  element_search.rs  path_search.rs  search_impl.rs
agdb/src/query/: insert_aliases_query.rs  insert_edges_query.rs  insert_index_query.rs  insert_nodes_query.rs  insert_values_query.rs  query_aliases.rs  query_condition.rs  query_error.rs  query_id.rs  query_ids.rs  query_result.rs  query_values.rs  remove_aliases_query.rs  remove_index_query.rs  remove_query.rs  remove_values_query.rs  search_query.rs  select_aliases_query.rs  select_all_aliases_query.rs  select_edge_count_query.rs  select_indexes_query.rs  select_key_count_query.rs  select_keys_query.rs  select_node_count.rs  select_query.rs  select_values_query.rs
agdb/src/query_builder/: insert.rs  insert_aliases.rs  insert_edge.rs  insert_index.rs  insert_nodes.rs  insert_values.rs  remove.rs  remove_aliases.rs  remove_ids.rs  remove_index.rs  remove_values.rs  search.rs  select.rs  select_aliases.rs  select_edge_count.rs  select_ids.rs  select_indexes.rs  select_key_count.rs  select_keys.rs  select_node_count.rs  select_values.rs  where_.rs
agdb/src/storage/: any_storage.rs  file_records.rs  file_storage.rs  file_storage_memory_mapped.rs  memory_storage.rs  storage_records.rs  write_ahead_log.rs
agdb/src/test_utilities/: collision_value.rs  test_file.rs
agdb/src/type_def/: enum_def.rs  expression_def.rs  function_def.rs  impl_def.rs  struct_def.rs  trait_def.rs
agdb/src/utilities/: serialize.rs
agdb/tests/: api_def_reflection_test.rs  db_test.rs  db_user_value_test.rs  efficient_agdb.rs  insert_aliases_test.rs  insert_edges_test.rs  insert_index_test.rs  insert_nodes_test.rs  insert_values_test.rs  quickstart.rs  remove_aliases_test.rs  remove_edges_test.rs  remove_index_test.rs  remove_nodes_test.rs  remove_values_test.rs  search_elements_test.rs  search_index_test.rs  search_test.rs  search_where_test.rs  select_aliases_test.rs  select_count_test.rs  select_edge_count_test.rs  select_indexes_test.rs  select_key_count_test.rs  select_keys.rs  select_node_count_test.rs  select_test.rs  select_values_test.rs  test_db_prior_0_11_0.agdb
agdb/tests/derive_feature_test/: mod.rs
agdb/tests/efficient_agdb/: mod.rs
agdb/tests/openapi_feature_test/: mod.rs
agdb/tests/quickstart/: mod.rs
agdb/tests/serde_feature_test/: mod.rs
agdb/tests/test_db/: mod.rs
agdb_api/rust/: Cargo.toml
agdb_api/rust/src/: api.rs  api_error.rs  api_result.rs  api_types.rs  client.rs  generators.rs  http_client.rs  lib.rs  test_server.rs  ts.rs
agdb_benchmark/: Cargo.toml  agdb_server.yaml  agdb_server_benchmark.sh  agdb_server_benchmark.yaml
agdb_benchmark/src/: bench_error.rs  bench_result.rs  config.rs  database.rs  main.rs  memory_monitor.rs  readers.rs  results.rs  retry.rs  users.rs  utilities.rs  writers.rs
agdb_benchmarks/: Cargo.toml  server_benchmark.sh
agdb_benchmarks/src/: bench_error.rs  config.rs  database.rs  main.rs  queries.rs  readers.rs  users.rs  utilities.rs  writer.rs  writers.rs
agdb_ci/: .gitignore  Cargo.toml  README.md
agdb_ci/src/: api.rs  ci_error.rs  language.rs  languages.rs  lib.rs  main.rs  sources.rs  utilities.rs
agdb_ci/src/language/: normalize_expr.rs  rust.rs  typescript.rs
agdb_ci/src/languages/: php.rs  rust.rs
agdb_ci/tests/: ci_test.rs
agdb_derive/: Cargo.toml
agdb_derive/src/: agdb_de_serialize.rs  api_def.rs  db_serialize.rs  db_type.rs  db_value.rs  impl_def.rs  lib.rs  type_def_parser.rs  user_value.rs
agdb_derive/src/api_def/: enum_def.rs  expression.rs  expression_parser.rs  function_def.rs  generics.rs  statement.rs  struct_def.rs  trait_def.rs  tuple_def.rs  type_def.rs
agdb_derive/src/impl_def/: definitions.rs
agdb_server/: Cargo.toml  README.md  build.rs  compose.yaml  containerfile  openapi.json  statefulset.yaml  test_queries.json
agdb_server/openapi/: schema.json  test_queries.json
agdb_server/src/: action.rs  api.rs  app.rs  cluster.rs  cluster_log.rs  config.rs  db.rs  db_pool.rs  error.rs  error_code.rs  forward.rs  logger.rs  main.rs  password.rs  raft.rs  redirect.rs  routes.rs  server_db.rs  server_error.rs  server_state.rs  user_id.rs  utilities.rs
agdb_server/test_certs/: test_cert.key.pem  test_cert.pem  test_root_ca.key.pem  test_root_ca.pem
agdb_server/tests/: admin_db_list_test.rs  admin_test.rs  admin_user_change_password_test.rs  admin_user_create_test.rs  admin_user_list_test.rs  db_add_test.rs  db_delete_test.rs  db_list_test.rs  db_remove_test.rs  db_test.rs  db_user_add_test.rs  integration.rs  server_test.rs  shutdown_test.rs  test_cert.key.pem  test_cert.pem  test_key.pem  test_root_ca.key.pem  test_root_ca.pem  test_root_ca_key.pem  test_server.rs  tests.rs  user_change_password_test.rs  user_login_test.rs  user_test.rs
crates/dictionary/: Cargo.toml
crates/graph_search/: Cargo.toml
crates/map_common/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage_map/: Cargo.toml
examples/generated_api/: Cargo.toml
(+2481 files in other folders)
