[package]
name = "agdb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "README.md"
description = "Agnesoft Graph Database"

[lib]
name = "agdb"
path = "src/agdb/lib.rs"
