[workspace]
resolver = "2"
members = [
    "agdb",
    "agdb_benchmark",
    "agdb_ci",
    "agdb_derive",
    "agdb_server",
    "agdb_api",
    "examples/app_db",
    "examples/indexes",
    "examples/joins",
    "examples/schema_migration",
    "examples/server_client_rust",
    "examples/user_types",
]
