[package]
name = "agdb"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[lib]

[dependencies]
agdb_derive = { version = "0.5.1", path = "../agdb_derive" }