[package]
name = "agdb"
version = "0.6.4"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[lib]

[features]
default = ["derive"]
derive = ["dep:agdb_derive"]
openapi = ["dep:utoipa"]
serde = ["dep:serde"]

[dependencies]
agdb_derive = { version = "0.6.4", path = "../agdb_derive", optional = true }
utoipa = { version = "4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1" }
