[package]
name = "agdb"
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[lib]

[features]
default = ["derive"]
api = ["derive"]
derive = ["dep:agdb_derive"]
openapi = ["dep:utoipa"]
serde = ["dep:serde"]

[dependencies]
agdb_derive = { version = "0.11.0", path = "../agdb_derive", optional = true }
utoipa = { version = "5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1" }
