[package]
name = "agdb_benchmark"
edition = "2024"
license = "Apache-2.0"

[dependencies]
agdb = { version = "0.13.0", path = "../agdb" }
agdb_api = { version = "0.13.0", path = "../agdb_api" }
num-format = { version = "0.4", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
