[package]
name = "agdb_benchmarks"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[dependencies]
agdb = { version = "0.5.2", path = "../agdb" }
num-format = { version = "0.4", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
