[package]
name = "agdb_benchmarks"
edition = "2021"
license = "Apache-2.0"

[dependencies]
agdb = { version = "0.6.2", path = "../agdb" }
num-format = { version = "0.4", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
