[package]
name = "agdb_benchmarks"
edition = "2024"
license = "Apache-2.0"

[dependencies]
agdb = { version = "0.12.8", path = "../agdb" }
num-format = { version = "0.4", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
