[package]
name = "agdb_ci"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
agdb = { version = "0.13.0", path = "../agdb", features = ["serde", "openapi", "api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"

[dev-dependencies]
agdb_api = { path = "../agdb_api", features = ["api", "test_server"] }
