[package]
name = "agdb_derive"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database - derive macros"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1"
syn = "2"
