[package]
name = "agdb_derive"
version = "0.11.1"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database - derive macros"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
