[package]
name = "agdb_server"
version = "0.12.3"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../README.md"
description = "Agnesoft Graph Database Server"
keywords = ["graph", "database", "api"]
categories = ["database", "database-implementations"]

[features]
default = []
tls = ["dep:axum-server", "dep:rustls", "reqwest/rustls-tls", "agdb_api/rust-tls"]
studio = ["dep:include_dir"]

[dependencies]
agdb = { version = "0.12.3", path = "../agdb", features = ["serde", "openapi"] }
agdb_api = { version = "0.12.3", path = "../agdb_api/rust", features = ["api"] }
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
include_dir = { version = "0.7", optional = true }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "stream"] }
ring = "0.17"
rustls = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5"
utoipa-rapidoc = { version = "6", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
