[package]
name = "agdb_api"
version = "0.10.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../../README.md"
description = "Agnesoft Graph Database API (Client)"
keywords = ["graph", "database", "api"]
categories = ["database", "api-bindings"]

[lib]

[features]
default = []
reqwest = ["dep:reqwest"]
rust-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
agdb = { version = "0.10.0", path = "../../agdb", features = ["serde", "openapi", "api"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"
