[package]
name = "agdb_api"
version = "0.12.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/agnesoft/agdb"
repository = "https://github.com/agnesoft/agdb"
documentation = "https://github.com/agnesoft/agdb"
readme = "../../README.md"
description = "Agnesoft Graph Database API (Client)"
keywords = ["graph", "database", "api"]
categories = ["database", "api-bindings"]

[lib]

[features]
default = []
rust-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
api = ["agdb/api"]

[dependencies]
agdb = { version = "0.12.0", path = "../../agdb", features = ["serde", "openapi"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"
