[package]
name = "agdb_storage_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agdb_db_error = { path = "../db_error", version = "<=0.1.0" }
agdb_map_common = { path = "../map_common", version = "<=0.1.0" }
agdb_serialize = { path = "../serialize", version = "<=0.1.0" }
agdb_storage = { path = "../storage", version = "<=0.1.0" }
agdb_utilities = { path = "../utilities", version = "<=0.1.0" }

[dev-dependencies]
agdb_test_utilities = { path = "../test_utilities", version = "<=0.1.0" }
