[package]
name = "generated_api"
edition = "2024"
license = "Apache-2.0"

[lib]

[dependencies]
agdb = { version = "0.12.5", path = "../../agdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json"] }
